--- a/Makefile.am
+++ b/Makefile.am
@@ -63,6 +63,15 @@ include init/Makefile.inc
 include listener/Makefile.inc
 include monitor/Makefile.inc
 
+rpm: dist-gzip
+	rpmbuild -tb $(distdir).tar.gz
+
+srpm: dist-gzip
+	rpmbuild -ts $(distdir).tar.gz
+
+rpms: dist-gzip
+	rpmbuild -ta $(distdir).tar.gz
+
 update-makefiles:
 	@for dir in $(include_subdirs) ; do \
 		echo " cp $(top_srcdir)/Makefile.am.subdir $(top_srcdir)/$$dir/Makefile.am" ; \
